name:                timesheet
version:             0.1.0.0
synopsis:            Creates a timesheet based on the earliest and latest windows event log entries for the day
description:         This only works if you power up and shut down your machine every workday
license:             BSD3
license-file:        LICENSE
author:              Kranium Gikos Mendoza
maintainer:          kranium@gikos.net
copyright:           (c) Kranium Gikos Mendoza 2013
category:            Utils
build-type:          Simple
cabal-version:       >=1.8


executable timesheet
  extensions: ForeignFunctionInterface
  main-is:             timesheet.hs
  -- other-modules:
  build-depends:       base ==4.*
                     , directory
                     , old-locale
                     , process
                     , time
                     , Win32